[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/ui/Borders.tscn" type="PackedScene" id=1]
[ext_resource path="res://states/Editor/Editor.gd" type="Script" id=2]
[ext_resource path="res://states/Editor/camera.gd" type="Script" id=3]
[ext_resource path="res://assets/backgrounds/starfield.png" type="Texture2D" id=4]
[ext_resource path="res://states/Editor/NewLevelDialog.tscn" type="PackedScene" id=5]
[ext_resource path="res://styles/Dialog.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/ui/button-normal.png" type="Texture2D" id=7]
[ext_resource path="res://assets/ui/button-pressed.png" type="Texture2D" id=8]
[ext_resource path="res://assets/ui/button-hover.png" type="Texture2D" id=9]
[ext_resource path="res://states/Editor/NewPathDialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://states/Editor/DrawArea.gd" type="Script" id=11]

[node name="Editor" type="Node2D"]
script = ExtResource( 2 )

[node name="camera" type="Camera2D" parent="."]
offset = Vector2( 400, 400 )
current = true
position_smoothing_speed = 20.0
script = ExtResource( 3 )

[node name="Textures" type="Control" parent="camera"]
offset_left = 100.0
offset_right = 700.0
offset_bottom = 800.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="camera/Textures"]
offset_right = 600.0
offset_bottom = 800.0
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="camera/Textures"]
offset_right = 600.0
offset_bottom = 800.0
mouse_filter = 2
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawArea" type="Node2D" parent="camera"]
position = Vector2( 100, 0 )
script = ExtResource( 11 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 0

[node name="Borders" parent="UI" instance=ExtResource( 1 )]
offset_left = -0.749207
offset_top = -0.749146
offset_right = -0.749207
offset_bottom = -0.749146

[node name="MarginContainer" type="MarginContainer" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 790.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toolbar" type="VBoxContainer" parent="UI/MarginContainer"]
offset_right = 80.0
offset_bottom = 780.0
theme_override_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/MarginContainer/Toolbar"]
offset_right = 80.0
offset_bottom = 21.0
text = "Toolbar"

[node name="AddPath" type="Button" parent="UI/MarginContainer/Toolbar"]
offset_top = 41.0
offset_right = 80.0
offset_bottom = 68.0
text = "Add path"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathList" type="ItemList" parent="UI/MarginContainer/Toolbar"]
offset_top = 88.0
offset_right = 80.0
offset_bottom = 97.0
auto_height = true

[node name="Save" type="Button" parent="UI/MarginContainer/Toolbar"]
offset_top = 117.0
offset_right = 80.0
offset_bottom = 144.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="UI/MarginContainer/Toolbar"]
offset_top = 164.0
offset_right = 80.0
offset_bottom = 191.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewLevelDialog" parent="UI" instance=ExtResource( 5 )]

[node name="NewPathDialog" parent="UI" instance=ExtResource( 10 )]

[node name="FileDialog" type="FileDialog" parent="UI"]
offset_left = 202.0
offset_top = 222.0
offset_right = 606.0
offset_bottom = 594.0
window_title = "Open a File"
resizable = true
dialog_hide_on_ok = true
mode = 0
filters = PackedStringArray( "*.ogg ; OGG", "*.mp3 ; MP3" )
current_dir = "res://assets/music"
current_path = "res://assets/music/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Popup" parent="UI"]
visible = true
offset_left = 307.0
offset_top = 188.0
offset_right = 457.0
offset_bottom = 288.0
theme_override_styles/panel = ExtResource( 6 )
exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UI/MainMenu"]
offset_right = 150.0
offset_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="UI/MainMenu/CenterContainer"]
offset_left = 22.0
offset_top = 14.0
offset_right = 127.0
offset_bottom = 85.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewLevel" type="MarginContainer" parent="UI/MainMenu/CenterContainer/Menu"]
offset_right = 105.0
offset_bottom = 21.0

[node name="Button" type="TextureButton" parent="UI/MainMenu/CenterContainer/Menu/NewLevel"]
offset_right = 105.0
offset_bottom = 21.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="Label" type="Label" parent="UI/MainMenu/CenterContainer/Menu/NewLevel"]
offset_left = 18.0
offset_right = 87.0
offset_bottom = 21.0
size_flags_horizontal = 4
size_flags_vertical = 1
text = "New level"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenLevel" type="MarginContainer" parent="UI/MainMenu/CenterContainer/Menu"]
offset_top = 25.0
offset_right = 105.0
offset_bottom = 46.0

[node name="Button" type="TextureButton" parent="UI/MainMenu/CenterContainer/Menu/OpenLevel"]
offset_right = 105.0
offset_bottom = 21.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="Label" type="Label" parent="UI/MainMenu/CenterContainer/Menu/OpenLevel"]
offset_left = 14.0
offset_right = 90.0
offset_bottom = 21.0
size_flags_horizontal = 4
size_flags_vertical = 1
text = "Open level"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="MarginContainer" parent="UI/MainMenu/CenterContainer/Menu"]
offset_top = 50.0
offset_right = 105.0
offset_bottom = 71.0

[node name="Button" type="TextureButton" parent="UI/MainMenu/CenterContainer/Menu/Exit"]
offset_right = 105.0
offset_bottom = 21.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="Label" type="Label" parent="UI/MainMenu/CenterContainer/Menu/Exit"]
offset_left = 18.0
offset_right = 86.0
offset_bottom = 21.0
size_flags_horizontal = 4
size_flags_vertical = 1
text = "Exit editor	"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
